--- a/assets/style.css
+++ b/assets/style.css
@@ -23,8 +23,9 @@ h1, h2, h3, h4, h5 {
 }
 
 .display-6 {
-    font-size: 2rem;
+    font-size: 1.8rem;
     font-weight: bold;
+    color: #003366;
 }
 
 button, .btn {
@@ -67,10 +68,6 @@ hr {
     margin-bottom: 30px;
 }
 
-.kpi-card .display-6 {
-    color: #003366;
-}
-
 .d-flex.justify-content-center {
     margin-top: 20px;
 }
@@ -83,3 +80,6 @@ hr {
     margin-bottom: 20px;
 }
 
+.graph-container:hover {
+    box-shadow: 0 6px 12px rgba(0,0,0,0.1);
+}
